--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -213,7 +213,7 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
-  font-family: "Righteous", cursive; "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Righteous", cursive, "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
   color: #333333;
