--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -213,7 +213,7 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
-  font-family: "Righteous", cursive, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
   color: #333333;
@@ -274,7 +274,7 @@ hr {
   margin-top: 20px;
   margin-bottom: 20px;
   border: 0;
-  border-top: 3px solid black;
+  border-top: 1px solid #eeeeee;
 }
 .sr-only {
   position: absolute;
@@ -1502,12 +1502,4 @@ address {
 }
 .affix {
   position: fixed;
-}
-
-#footer {
-  width: 100%;
-  height: 40px;
-  margin: 0 auto;
-  text-align: left;
-  font-family: Arial;
 }
